2007-03-13  Akim Demaille  <akim.demaille@free.fr>

	m4_after
	We have several bad dependencu issues, let's track them down.
	* m4-after.m4: New.
	* urbi-package-kind.m4: Use it.

2007-03-13  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Add required CPPFLAGS for Windows in the urbi-with-openssl macro.
	* urbi-with-openssl.m4: Add required CPPFLAGS.

2007-03-13  POTHIER Benoit  <pothier@gostai.com>

	Add libERA201D1 in aibo core link process to allow access to wifi stats.
	* urbi-openr.m4: .

2007-03-13  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Fix the testing program to make it finish on Windows.
	* urbi-with-openssl.m4: Remove the RAND_status() call
          as it doesn't finish under Windows.

2007-03-04  SIGOURE Benoit  <tsuna@lrde.epita.fr>

	Search libcrypto under /usr/lib and /lib.
	* urbi-with-openssl.m4: Here.

2007-03-03  Akim Demaille  <akim.demaille@free.fr>

	* init.mk (CLEANFILES): Get rid of more manifest files.

2007-03-01  Akim Demaille  <demaille@gostai.com>

	Don't pass -Werror to aibo because of OPEN-R
	* urbi-prog-cxx.m4: here.

2007-03-01  Akim Demaille  <demaille@gostai.com>

	Stop forcing VERBOSE=1
	* check.mk: here.

2007-03-01  Akim Demaille  <demaille@gostai.com>

	Clarify/simplify the KERNEL_*FLAGS
	* urbi-dirs.m4: More documentation.
	For the core, do not define SDK_*FLAGS, define KERNEL_*FLAGS.

2007-03-01  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Simplify urbi-with-openhrp.
	* urbi-with-openhrp.m4: Simplify macro.

2007-03-01  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Add robot name support for OpenHRP.
	* urbi-with-openhrp.m4: Add with-robot macro.
	* urbi-with-orbix.m4: Lowercase variables.

2007-03-01  Akim Demaille  <demaille@gostai.com>

	Let the kernel install the urbi header in its include directory
	* urbi-dirs.m4 (urbiincludedir): When the package is a kernel,
	define it using kernelincludedir.

2007-03-01  Akim Demaille  <demaille@gostai.com>

	Force verbosity for the BF