@@ -1,4 +1,4 @@
-#
+#							-*- Autoconf -*-
 # Copyright (C) Gostai S.A.S., 2006.
 #
 # This software is provided "as is" without warranty of any kind,
@@ -12,11 +12,11 @@
 # --------------------
 # Adds a --disable-debug option to configure and add -DNDEBUG in the CPPFLAGS.
 AC_DEFUN([WITH_DISABLE_DEBUG],
-[AC_ARG_ENABLE([debug], [AS_HELP_STRING([--disable-debug],
-                                       [Disable debugging for release mode.])]
-               [],dnl action-if-given
-               [AC_SUBST([AM_CPPFLAGS], ["$AM_CPPFLAGS -DNDEBUG"])
-                AC_MSG_WARN([[Debugging disabled: No assert() will be performed.]])
-                # FIXME: Remove -g from the default flags (if GXX is used etc.) ?
-               ])
+[AC_ARG_ENABLE([debug],
+   [AS_HELP_STRING([--disable-debug], [Disable debugging for release mode.])]
+   [],dnl action-if-given
+   [AC_SUBST([AM_CPPFLAGS], ["$AM_CPPFLAGS -DNDEBUG"])
+   AC_MSG_WARN([[Debugging disabled: No assert() will be performed.]])
+   # FIXME: Remove -g from the default flags (if GXX is used etc.) ?
+   ])
 ])
