@@ -1,3 +1,16 @@
+# _URBI_LIBPORT_COMMON
+# --------------------
+# Code common to the use of an installed or shipped libport.
+AC_DEFUN([_URBI_LIBPORT_COMMON],
+[AC_REQUIRE([URBI_PTHREAD])dnl
+
+# Where we install the libport files.
+URBI_PACKAGE_KIND_SWITCH(
+  [kernel],     [AC_SUBST([libportdir], ['${kernelincludedir}/libport'])],
+  [sdk\|core],  [AC_SUBST([libportdir], ['${sdkincludedir}/libport'])])
+])
+
+
 # URBI_LIBPORT_INSTALLED
 # ----------------------
 # We use an installed libport, most probably that of the kernel we
@@ -7,12 +20,14 @@
 # Cores use an installed libport (in kernelincludedir), *and* install it
 # (in sdkincludedir).
 AC_DEFUN([URBI_LIBPORT_INSTALLED],
-[AC_REQUIRE([URBI_PTHREAD])
+[AC_REQUIRE([_URBI_LIBPORT_COMMON])dnl
+AC_AFTER([$0], [URBI_DIRS])dnl
 
-# Where we install the libport files.
-URBI_PACKAGE_KIND_SWITCH(
-  [kernel],     [AC_SUBST([libportdir], ['${kernelincludedir}/libport'])],
-  [sdk\|core],  [AC_SUBST([libportdir], ['${sdkincludedir}/libport'])])
+# Check that we can find libport files.
+libport_config_hh=$(URBI_RESOLVE_DIR([$kernelincludedir/libport/config.h]))
+if test ! -f $libport_config_h; then
+  AC_ERROR([--with-urbi-kernel: cannot find $libport_config_h])
+fi
 ])
 
 # URBI_LIBPORT
@@ -20,8 +35,8 @@ URBI_PACKAGE_KIND_SWITCH(
 # Invoke the macros needed by a shipped URBI_LIBPORT (i.e., a non-installed
 # copy in this source tree).
 AC_DEFUN([URBI_LIBPORT],
-[AC_REQUIRE([URBI_UFLOAT])
-AC_REQUIRE([URBI_LIBPORT_INSTALLED])
+[AC_REQUIRE([_URBI_LIBPORT_COMMON])dnl
+AC_REQUIRE([URBI_UFLOAT])dnl
 
 # Create libport/config.h.
 URBI_PREFIX_CONFIG_H([libport/config.h], [LIBPORT])
